--- a/vignettes/data_in_mvgam.Rmd
+++ b/vignettes/data_in_mvgam.Rmd
@@ -334,3 +334,6 @@ str(testmod$model_data)
 ```{r}
 code(testmod)
 ```
+
+## Interested in contributing?
+I'm actively seeking PhD students and other researchers to work in the areas of ecological forecasting, multivariate model evaluation and development of `mvgam`. Please reach out if you are interested (n.clark'at'uq.edu.au)
