--- a/README.Rmd
+++ b/README.Rmd
@@ -274,3 +274,6 @@ There are many more extended uses of `mvgam`, including the ability to fit hiera
 
 ## License
 This project is licensed under an `MIT` open source license
+
+## Interested in contributing?
+I'm actively seeking PhD students and other researchers to work in the areas of ecological forecasting, multivariate model evaluation and development of `mvgam`. Please reach out if you are interested (n.clark'at'uq.edu.au)
