--- a/index.Rmd
+++ b/index.Rmd
@@ -91,3 +91,6 @@ The package can also be used to generate all necessary data structures, initial 
   
 * [Stan Discourse](https://discourse.mc-stan.org/)
 * [JAGS Discourse](https://sourceforge.net/projects/mcmc-jags/)
+
+## Interested in contributing?
+I'm actively seeking PhD students and other researchers to work in the areas of ecological forecasting, multivariate model evaluation and development of `mvgam`. Please reach out if you are interested (n.clark'at'uq.edu.au)
