few cmdcheck updates

--- a/misc/BeamOptions.tex
+++ b/misc/BeamOptions.tex
@@ -41,8 +41,8 @@
     \put(\LenToUnit{0.88\paperwidth},\LenToUnit{0.88\paperheight}){#1}}}
 \AddToShipoutPictureFG{
   \AtPagemyUpperLeft{{
-      \href{http://mc-stan.org/}{\includegraphics[scale=0.25,keepaspectratio]{../logos/Stan.png}}
+      \href{https://nicholasjclark.github.io/mvgam/}{\includegraphics[scale=0.5,keepaspectratio]{mvgam_logo.png}}
       \hspace{0.025in}
-      \href{http://ggplot2.tidyverse.org}{\includegraphics[scale=0.5,keepaspectratio]{../logos/ggplot2.png}}
+      \href{https://mc-stan.org/}{\includegraphics[scale=0.75,keepaspectratio]{stan_logo.png}}
 }}
 }%
