--- a/index.Rmd
+++ b/index.Rmd
@@ -32,9 +32,11 @@ vembedr::embed_url("https://www.youtube.com/watch?v=0zZopLlomsQ")
 * `lognormal()` for non-negative real-valued data
 * `Gamma()` for non-negative real-valued data
 * `betar()` for proportional data on `(0,1)`
+* `bernoulli()` for binary data
 * `poisson()` for count data
 * `nb()` for overdispersed count data
-* `nmix()` for count data with imperfect detection
+* `binomial()` for count data with known number of trials
+* `nmix()` for count data with imperfect detection (unknown number of trials)
 * `tweedie()` for overdispersed count data
   
 Note that only `poisson()`, `nb()`, and `tweedie()` are available if using `JAGS`. All families, apart from `tweedie()`, are supported if using `Stan`. See `??mvgam_families` for more information. Below is a simple example for simulating and modelling proportional data with `Beta` observations over a set of seasonal series with independent Gaussian Process dynamic trends:
